; ModuleID = '/home/carl/AnghaBench/linux/drivers/parisc/extr_ccio-dma.c_ccio_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/parisc/extr_ccio-dma.c_ccio_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i64, i8*, i32, i64)* @ccio_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ccio_free(%struct.device* %0, i64 %1, i8* %2, i32 %3, i64 %4) #0 {
  %6 = alloca %struct.device*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %11 = load %struct.device*, %struct.device** %6, align 8
  %12 = load i32, i32* %9, align 4
  %13 = load i64, i64* %7, align 8
  %14 = call i32 @ccio_unmap_page(%struct.device* %11, i32 %12, i64 %13, i32 0, i32 0)
  %15 = load i8*, i8** %8, align 8
  %16 = ptrtoint i8* %15 to i64
  %17 = load i64, i64* %7, align 8
  %18 = call i32 @get_order(i64 %17)
  %19 = call i32 @free_pages(i64 %16, i32 %18)
  ret void
}

declare dso_local i32 @ccio_unmap_page(%struct.device*, i32, i64, i32, i32) #1

declare dso_local i32 @free_pages(i64, i32) #1

declare dso_local i32 @get_order(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
